--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -13,7 +13,9 @@
     <link rel="stylesheet" href="{% static 'store/css/style.css' %}">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-
+    
+    <!-- Heart symbol -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
 </head>
 <body>
@@ -73,6 +75,12 @@
                 <li><a class="dropdown-item" href="{% url 'store:logout' %}">Logout</a></li>
                 </ul>
           </li>
+          <a href="{% url 'store:wishlist' %}" class="nav-link">
+              <i class="far fa-heart"></i>
+              {% if user.is_authenticated %}
+                  (<span id="wishlist-count">{{ wishlist_count }}</span>)
+              {% endif %}
+          </a>
         {% else %}
           <li class="nav-item">
             <a class="nav-link" href="{% url 'store:login' %}">Login</a>
