--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -103,6 +103,20 @@
                   {{ form.notes.errors }}
                 </div>
               </div>
+              
+              <div class="mb-3">
+                <label class="form-label fw-bold">Payment Method</label>
+
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="payment_method" value="cod" checked>
+                  <label class="form-check-label">Cash on Delivery</label>
+                </div>
+
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="payment_method" value="online">
+                  <label class="form-check-label">Online Payment (Razorpay)</label>
+                </div>
+              </div>
 
               <div class="d-flex gap-2">
                 <button type="submit" class="btn btn-success" id="place-order-btn">Place Order</button>
