--- a/store/templates/store/login.html
+++ b/store/templates/store/login.html
@@ -7,6 +7,7 @@
 
       <form method="post">
         {% csrf_token %}
+
         <div class="mb-3">
           <label class="form-label">Username</label>
           <input class="form-control" type="text" name="username" required>
@@ -17,11 +18,19 @@
           <input class="form-control" type="password" name="password" required>
         </div>
 
+        <!-- Forgot Password -->
+        <div class="mb-3 text-end">
+          <a href="{% url 'store:forgot_password' %}" class="text-decoration-none">
+            Forgot password?
+          </a>
+        </div>
+
         <input type="hidden" name="next" value="{{ next|default:'' }}">
 
         <button type="submit" class="btn btn-primary">Login</button>
         <a class="btn btn-outline-secondary ms-2" href="{% url 'store:signup' %}">Sign up</a>
       </form>
+
     </div>
   </div>
 </div>
