--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -8,6 +8,7 @@
 {% block content %}
 
 <!-- HERO SECTION -->
+ <main class="home-page">
 <section class="hero-section text-white d-flex align-items-center">
     <div class="container hero-content text-center">
         <div class="hero-box">
@@ -98,5 +99,5 @@
         </div>
     </div>
 </section>
-
+</main>
 {% endblock %}
