--- a/store/templates/store/product_detail.html
+++ b/store/templates/store/product_detail.html
@@ -98,7 +98,7 @@
                                     onclick="toggleWishlist('{{ product.id }}')">
                                 <i class="{% if is_in_wishlist %}fas{% else %}far{% endif %} fa-heart"></i>
                                 <span class="wishlist-text">
-                                    {% if is_in_wishlist %}Remove{% else %}Wishlist{% endif %}
+                                    {% if is_in_wishlist %}Remove{% else %}Add to Wishlist{% endif %}
                                 </span>
                             </button>
                             {% endif %}
